--- a/src/components/pages/SomePage/SomePage.module.less
+++ b/src/components/pages/SomePage/SomePage.module.less
@@ -1,4 +1,5 @@
-@import "../../../variables.less";
+// @import "../../../variables.less";
+@import "variables.less";
 
 
 .wrapper {
@@ -38,6 +39,7 @@
 .text {
     font-family: 'Inter', sans-serif;
     color: @text-color-thin;
+
     & > a {
         text-decoration: none;
         color: @text-color-hl;
