components: added layout

--- a/src/components/UI/layout/ActiveLayout/ActiveLayout.module.less
+++ b/src/components/UI/layout/ActiveLayout/ActiveLayout.module.less
@@ -1,4 +1,10 @@
 
+@import "variables.less";
+
 .wrapper {
-    
+    background-color: @background-dark-color;
+
+    border: @medium-border-thickness solid @border-light-color;
+    border-radius: @border-radius;
+    box-shadow: @box-shadow;
 }
