--- a/src/components/UI/layout/Layout/Layout.module.less
+++ b/src/components/UI/layout/Layout/Layout.module.less
@@ -1,4 +1,9 @@
 
+@import "variables.less";
+
 .wrapper {
-    
+    background-color: @background-light-color;
+
+    border: @medium-border-thickness solid @border-light-color;
+    border-radius: @border-radius;
 }
