--- a/src/pages/SomePage/SomePage.module.less
+++ b/src/pages/SomePage/SomePage.module.less
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: @background-color-light;
+    background-color: @background-light-color;
 }
 
 .title {
@@ -32,16 +32,16 @@
 .header {
     font-family: "Montserrat", sans-serif;
     font-size: 50px;
-    color: @text-color-hl;
+    color: @text-light-color;
     margin: auto 0;
 }
 
 .text {
     font-family: 'Inter', sans-serif;
-    color: @text-color-thin;
+    color: @text-light-color;
 
     & > a {
         text-decoration: none;
-        color: @text-color-hl;
+        color: @text-light-color;
     }
 }
