--- a/src/variables.less
+++ b/src/variables.less
@@ -3,9 +3,35 @@
 
 // Variables
 
-@background-color-light: #f6fcfc;
-@background-color-dark: #e1e9f5;
+// Font thickness
+@light-font-thickness: 300;
+@regilar-font-thickness: 400;
+@mediul-font-thicnkess: 500;
 
-@text-color-bold: #020302;
-@text-color-thin: #1a1a1a;
-@text-color-hl: #0258af;
+// Font size
+@small-font-size: 16;
+@medium-font-size: 24;
+@large-font-size: 32;
+
+// Border thickness
+@light-border-thickness: 0.5px;
+@regular-border-thickness: 1px;
+@medium-border-thickness: 2.5px;
+
+// Border radius
+@border-radius: 5px;
+
+// Color
+@background-light-color: #F4F9FD;
+@background-dark-color: #E9F1F9;
+
+@border-light-color: #8197BC;
+@border-dark-color: #4E648B;
+
+@text-light-color: #4E648B;
+
+@icon-light-color: #8197BC;
+@icon-dark-color: #213455;
+
+// Box shadow
+@box-shadow: 0 0 2px 0 rgba(0, 0, 0, 25%);
