--- a/src/pages/DemoUI/DemoUI.module.less
+++ b/src/pages/DemoUI/DemoUI.module.less
@@ -1,14 +1,25 @@
-// @import "../../../variables.less";
+
 @import "variables.less";
 
 
 .wrapper {
+    font-family: "Inter", sans-serif;
+
+    padding: 20px;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+
+    overflow: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
-    background-color: @background-color-light;
+    background-color: @background-light-color;
+
+    & > * {
+        margin-bottom: 20px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
 }
