--- a/src/components/UI/layout/Layout/Layout.module.less
+++ b/src/components/UI/layout/Layout/Layout.module.less
@@ -2,8 +2,9 @@
 @import "variables.less";
 
 .wrapper {
+    padding: 10px;
     background-color: @background-light-color;
 
-    border: @medium-border-thickness solid @border-light-color;
+    border: @bold-border-thickness solid @border-light-color;
     border-radius: @border-radius;
 }
