--- a/src/variables.less
+++ b/src/variables.less
@@ -16,7 +16,8 @@
 // Border thickness
 @light-border-thickness: 0.5px;
 @regular-border-thickness: 1px;
-@medium-border-thickness: 2.5px;
+@medium-border-thickness: 1.5px;
+@bold-border-thickness: 2.5px;
 
 // Border radius
 @border-radius: 5px;
