--- a/src/pages/DemoUI/DemoUI.module.less
+++ b/src/pages/DemoUI/DemoUI.module.less
@@ -23,3 +23,35 @@
         }
     }
 }
+
+.interactiveList {
+    width: 400px;
+
+    & > * {
+        margin-bottom: 10px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
+
+.buttonList {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    height: 80px;
+
+    width: 350px;
+
+    & > button {
+        height: 40px;
+    }
+
+    & > * {
+        margin-right: 10px;
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+}
