--- a/src/components/UI/button/Button/Button.module.less
+++ b/src/components/UI/button/Button/Button.module.less
@@ -3,12 +3,15 @@
 
 .wrapper {
     padding: 10px;
+    margin: @medium-border-thickness - @light-border-thickness;
     background-color: @background-light-color;
 
     border: @light-border-thickness solid @border-dark-color;
     border-radius: @border-radius;
 
     transition: 0.1s ease-out;
+    transition: margin 0s;
+    transition: border 0s;
 
     &:hover {
         background-color: @background-dark-color;
@@ -16,6 +19,7 @@
 }
 
 .active {
+    margin: 0;
     border: @medium-border-thickness solid @border-dark-color;
     box-shadow: @box-shadow;
     background-color: @background-dark-color;
