components: added lever button and fixed some design things

--- a/src/variables.less
+++ b/src/variables.less
@@ -29,7 +29,7 @@
 @border-light-color: #8197BC;
 @border-dark-color: #4E648B;
 
-@text-light-color: #4E648B;
+@text-light-color: #213455; // #4E648B
 
 @icon-light-color: #8197BC;
 @icon-dark-color: #213455;
