--- a/src/variables.less
+++ b/src/variables.less
@@ -6,7 +6,7 @@
 // Font thickness
 @light-font-thickness: 300;
 @regilar-font-thickness: 400;
-@mediul-font-thicnkess: 500;
+@medium-font-thicnkess: 500;
 
 // Font size
 @small-font-size: 16;
@@ -36,3 +36,6 @@
 
 // Box shadow
 @box-shadow: 0 0 3px 0 rgba(0, 0, 0, 25%);
+
+// Color but in filter
+@filter-border-color-light: invert(62%) sepia(46%) saturate(255%) hue-rotate(179deg) brightness(88%) contrast(86%);
