--- a/src/components/UI/input/SearchInput/SearchInput.module.less
+++ b/src/components/UI/input/SearchInput/SearchInput.module.less
@@ -1,4 +1,22 @@
 
+@import "variables.less";
+
 .wrapper {
-    
+    width: 100%;
+    max-width: 300px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-bottom: @bold-border-thickness solid @border-dark-color;
+    border-radius: 1px;
+    padding-bottom: 3px;
+
+
+    & > img {
+        margin: 0 5px;
+    }
+
+    & > input {
+        margin-right: 5px;
+    }
 }
