components: added slider select

--- a/src/components/UI/select/SliderSelect/SliderSelect.module.less
+++ b/src/components/UI/select/SliderSelect/SliderSelect.module.less
@@ -1,4 +1,11 @@
 
 .wrapper {
-    
+    display: flex;
+    flex-direction: row;
+    & > * {
+        margin-right: 10px;
+        &:last-child {
+            margin-right: 0px;
+        }
+    }
 }
