--- a/src/components/UI/button/Button/Button.module.less
+++ b/src/components/UI/button/Button/Button.module.less
@@ -33,4 +33,7 @@
     border: @medium-border-thickness solid @border-dark-color;
     box-shadow: @box-shadow;
     background-color: @background-dark-color;
+    & > * {
+        // transition: 0.1s ease-out;
+    }
 }
