components: added select component

--- a/src/components/UI/button/Button/Button.module.less
+++ b/src/components/UI/button/Button/Button.module.less
@@ -13,6 +13,8 @@
     transition: margin 0s;
     transition: border 0s;
 
+    cursor: pointer;
+
     &:hover {
         background-color: @background-dark-color;
     }
