--- a/src/components/UI/select/Select/Select.module.less
+++ b/src/components/UI/select/Select/Select.module.less
@@ -1,4 +1,13 @@
 
+@import "variables.less";
+
 .wrapper {
-    
+  background-color: @background-light-color;
+  border: @medium-border-thickness solid @border-dark-color;
+  border-radius: 5px;
+  padding: 5px;
+  min-width: 100px;
+  font-family: "Inter";
+  font-size: @small-font-size;
+  cursor: pointer;
 }
