--- a/src/components/UI/button/Button/Button.module.less
+++ b/src/components/UI/button/Button/Button.module.less
@@ -20,6 +20,7 @@
     }
 
     &:disabled {
+        cursor: default;
         box-shadow: none;
         background-color: @background-light-color;
         border: @light-border-thickness solid @border-light-color;
@@ -35,7 +36,4 @@
     border: @medium-border-thickness solid @border-dark-color;
     box-shadow: @box-shadow;
     background-color: @background-dark-color;
-    & > * {
-        // transition: 0.1s ease-out;
-    }
 }
