components: fixed types of button

--- a/src/components/UI/button/Button/Button.module.less
+++ b/src/components/UI/button/Button/Button.module.less
@@ -37,3 +37,8 @@
     box-shadow: @box-shadow;
     background-color: @background-dark-color;
 }
+
+.invisibleBorder {
+    border-color: transparent;
+    box-shadow: none;
+}
