ready for develop webeditor

--- a/src/variables.less
+++ b/src/variables.less
@@ -38,4 +38,4 @@
 @box-shadow: 0 0 3px 0 rgba(0, 0, 0, 25%);
 
 // Color but in filter
-@filter-border-color-light: invert(62%) sepia(46%) saturate(255%) hue-rotate(179deg) brightness(88%) contrast(86%);
+@filter-color-light: invert(62%) sepia(46%) saturate(255%) hue-rotate(179deg) brightness(88%) contrast(86%);
