--- a/src/components/UI/button/Button/Button.module.less
+++ b/src/components/UI/button/Button/Button.module.less
@@ -2,16 +2,22 @@
 @import "variables.less";
 
 .wrapper {
-    padding: 10px;
     margin: @medium-border-thickness - @light-border-thickness;
+}
+
+.button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    height: 100%;
+    width: 100%;
+    padding: 10px;
     background-color: @background-light-color;
 
     border: @regular-border-thickness solid @border-dark-color;
     border-radius: @border-radius;
-
-    transition: 0.1s ease-out;
-    transition: margin 0s;
-    transition: border 0s;
 
     cursor: pointer;
 
@@ -26,16 +32,27 @@
         border: @light-border-thickness solid @border-light-color;
 
         & * {
-            filter: @filter-border-color-light;
+            filter: @filter-color-light;
         }
     }
 }
 
 .active {
     margin: 0;
-    border: @medium-border-thickness solid @border-dark-color;
-    box-shadow: @box-shadow;
-    background-color: @background-dark-color;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    & > button {
+        // padding: 15px;
+        height: 90%;
+        width: 90%;
+        border: @medium-border-thickness solid @border-dark-color;
+        box-shadow: @box-shadow;
+        background-color: @background-dark-color;
+    }
 }
 
 .invisibleBorder {
