--- a/src/components/UI/icon/Icon/Icon.module.less
+++ b/src/components/UI/icon/Icon/Icon.module.less
@@ -1,6 +1,9 @@
 
 .wrapper {
     display: block;
-    height: 24px;
-    width: 24px;
+    height: 100%;
+    width: 100%;
+
+    min-width: 24px;
+    min-height: 24px;
 }
