--- a/src/pages/App.module.less
+++ b/src/pages/App.module.less
@@ -3,3 +3,13 @@
 .wrapper {
     height: 100vh
 }
+
+img, p {
+    pointer-events: none;
+    // user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
