done base for logic editor desing

--- a/src/components/UI/button/Button/Button.module.less
+++ b/src/components/UI/button/Button/Button.module.less
@@ -57,6 +57,8 @@
 }
 
 .invisibleBorder {
-    border-color: transparent;
-    box-shadow: none;
+    & > button {
+        border-color: transparent;
+        box-shadow: none;
+    }
 }
