--- a/src/pages/LogicEditor/RightBar/RightBar.module.less
+++ b/src/pages/LogicEditor/RightBar/RightBar.module.less
@@ -5,4 +5,12 @@
 .wrapper {
     height: 100%;
     width: 100%;
+
+    & > * {
+        margin-bottom: 10px;
+    }
+
+    & > *:last-child {
+        margin-bottom: 0;
+    }
 }
