first block system (drag & drop + system for movement)

--- a/src/variables.less
+++ b/src/variables.less
@@ -34,6 +34,16 @@
 @icon-light-color: #8197BC;
 @icon-dark-color: #213455;
 
+// Draggable colors
+@draggable-background-color: #E9F1F9;
+@draggable-border-color: #8197BC;
+@draggable-text-color: #213455;
+
+// Draggable colors
+@droppable-background-color: #F4F9FD;
+@droppable-border-color: #8197BC;
+@droppable-hover-color: #246ff0;
+
 // Box shadow
 @box-shadow: 0 0 3px 0 rgba(0, 0, 0, 25%);
 
