--- a/src/pages/LogicEditor/BlockFeild/BlockFeild.module.less
+++ b/src/pages/LogicEditor/BlockFeild/BlockFeild.module.less
@@ -5,4 +5,14 @@
 .wrapper {
     height: 100%;
     width: 100%;
+    padding: 10px 20px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.blockline {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
