redux setup + active draggable block highlight

--- a/src/variables.less
+++ b/src/variables.less
@@ -36,6 +36,7 @@
 
 // Draggable colors
 @draggable-background-color: #E9F1F9;
+@draggable-background-dark-color: #c1d1ee;
 @draggable-border-color: #8197BC;
 @draggable-text-color: #213455;
 
