--- a/src/components/LogicBlocks/CommonDraggable/CommonDraggable.module.less
+++ b/src/components/LogicBlocks/CommonDraggable/CommonDraggable.module.less
@@ -2,6 +2,7 @@
 @import "variables.less";
 
 .wrapper {
+    min-width: 45px;
     box-sizing: border-box;
     padding: 6px 8px;
     border: 2px solid @draggable-border-color;
@@ -13,6 +14,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
 
     // transition: 1s ease-out;
 
@@ -31,4 +33,12 @@
     box-shadow: @box-shadow;
     font-size: 20px;
     font-weight: @medium-font-thicnkess;
+}
+
+.active {
+    background-color: @draggable-background-dark-color;
+}
+
+.dragging {
+    font-weight: 500;
 }
